--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* 100% hand coded on planet Earth */
+/* resume CSS file */
+
 *, 
 html, 
 body {
@@ -35,6 +38,7 @@ body {
     --salmon: rgb(253, 146, 134);
     --hilighter: rgb(255, 255, 0);
     --link-hover-color: rgb(255, 68, 0);
+    --our-gray: rgb(230, 230, 230);
     /*  END CUSTOM COLORS */
     margin: 0;
     padding: 0;
@@ -84,7 +88,7 @@ h2 {
     font-family: "Heebo";
     font-size: 30px;
     letter-spacing: 0.125ch;
-    margin: 15px;
+    margin: 10px;
 }
 
 h2:hover {
@@ -97,11 +101,39 @@ h2:hover {
 body {
     /* background-color: var(--avocado); */
     background-color: rgb(152, 194, 194);
-    padding: 35px 100px;
+    padding: 0px 100px;
 }
 
 header {
-    padding: 15px;
+    margin: 15px;
+}
+
+.download {
+    padding: 0 0 10px 15px;
+}
+
+button#pdf {
+    padding: 8px;
+    border-radius: 5px;
+    color: white;
+    font-family: "Heebo";
+    font-size: 16px;
+    letter-spacing: 0.1ch;
+    background-color: var(--orange-burnt-2);
+    border: 3px solid black;
+    transition: background-color 500ms ease-out;
+}
+
+button#pdf:hover {
+    cursor: pointer;
+    background-color: var(--charcoal);
+    color: white;
+}
+
+button#pdf:active {
+    background-color: white;
+    color: black;
+    border-color: var(--hilighter);
 }
 
 li {
@@ -126,7 +158,7 @@ blockquote {
     color: var(--orange-burnt-2);
     font-size: 22px;
     font-weight: ;
-    padding: 30px 15px;
+    padding: 30px 15px 0 15px;
 }
 /* END ELEMENTS */
 
@@ -144,16 +176,25 @@ blockquote {
 .experience,
 .work-history {
     /* background-color: white; */
-    background-color: rgb(230, 230, 230);
+    background-color: var(--our-gray);
     padding: 15px 30px;
     margin: 5px 0;
 }
 
 .dropdown {
-    background-color: rgb(230, 230, 230);
+    background-color: var(--our-gray);
     /* background-color: white; */
     padding: 15px 30px;
     display: none;
+}
+
+.job-title {
+    font-weight: bold;
+    font-family: "Heebo";
+}
+
+.job-time {
+    font-style: italic;
 }
 
 /* MEDIA QUERIES */
